[gd_scene load_steps=123 format=2]

[ext_resource path="res://scenes/main.gd" type="Script" id=1]
[ext_resource path="res://sprites/space.png" type="Texture" id=2]
[ext_resource path="res://sprites/orbit.png" type="Texture" id=3]
[ext_resource path="res://sprites/planet.png" type="Texture" id=4]
[ext_resource path="res://sprites/star.png" type="Texture" id=5]
[ext_resource path="res://sprites/ship.png" type="Texture" id=6]
[ext_resource path="res://theme/theme.tres" type="Theme" id=7]
[ext_resource path="res://theme/thaleah_fat.ttf" type="DynamicFontData" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 1000, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 1200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 1400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 1600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 1800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 2000, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 2200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 2400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 2600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 2800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 3000, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 3200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 3400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 3600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 3800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 4000, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 4200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 4400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 4600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 4800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 5000, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 5200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 5400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 5600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 5 )
region = Rect2( 5800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 5 )
region = Rect2( 6000, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 5 )
region = Rect2( 6200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 5 )
region = Rect2( 6400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 5 )
region = Rect2( 6600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 5 )
region = Rect2( 6800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 5 )
region = Rect2( 7000, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 5 )
region = Rect2( 7200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 5 )
region = Rect2( 7400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 5 )
region = Rect2( 7600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 5 )
region = Rect2( 7800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 5 )
region = Rect2( 8000, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 5 )
region = Rect2( 8200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 5 )
region = Rect2( 8400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 5 )
region = Rect2( 8600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 5 )
region = Rect2( 8800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 5 )
region = Rect2( 9000, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 5 )
region = Rect2( 9200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 5 )
region = Rect2( 9400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 5 )
region = Rect2( 9600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 5 )
region = Rect2( 9800, 0, 200, 200 )

[sub_resource type="SpriteFrames" id=51]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 4 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 4 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 4 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 4 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 4 )
region = Rect2( 600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 4 )
region = Rect2( 700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 4 )
region = Rect2( 800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 4 )
region = Rect2( 900, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 4 )
region = Rect2( 1000, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 4 )
region = Rect2( 1100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 4 )
region = Rect2( 1200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 4 )
region = Rect2( 1300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 4 )
region = Rect2( 1400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 4 )
region = Rect2( 1500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 4 )
region = Rect2( 1600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 4 )
region = Rect2( 1700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 4 )
region = Rect2( 1800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 4 )
region = Rect2( 1900, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 4 )
region = Rect2( 2000, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 4 )
region = Rect2( 2100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 4 )
region = Rect2( 2200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 4 )
region = Rect2( 2300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 4 )
region = Rect2( 2400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 4 )
region = Rect2( 2500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 4 )
region = Rect2( 2600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 4 )
region = Rect2( 2700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 4 )
region = Rect2( 2800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 4 )
region = Rect2( 2900, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 4 )
region = Rect2( 3000, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 4 )
region = Rect2( 3100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 4 )
region = Rect2( 3200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 4 )
region = Rect2( 3300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 4 )
region = Rect2( 3400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 4 )
region = Rect2( 3500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 4 )
region = Rect2( 3600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 4 )
region = Rect2( 3700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 4 )
region = Rect2( 3800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 4 )
region = Rect2( 3900, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 4 )
region = Rect2( 4000, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 4 )
region = Rect2( 4100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 4 )
region = Rect2( 4200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 4 )
region = Rect2( 4300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 4 )
region = Rect2( 4400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 4 )
region = Rect2( 4500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 4 )
region = Rect2( 4600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 4 )
region = Rect2( 4700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 4 )
region = Rect2( 4800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 4 )
region = Rect2( 4900, 0, 100, 100 )

[sub_resource type="SpriteFrames" id=102]
animations = [ {
"frames": [ SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 6 )
region = Rect2( 0, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 6 )
region = Rect2( 16, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 6 )
region = Rect2( 32, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 6 )
region = Rect2( 48, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 6 )
region = Rect2( 64, 24, 16, 24 )

[sub_resource type="SpriteFrames" id=113]
animations = [ {
"frames": [ SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="DynamicFont" id=114]
size = 48
font_data = ExtResource( 8 )

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Objects" type="CanvasLayer" parent="."]

[node name="Star" type="AnimatedSprite" parent="Objects"]
position = Vector2( 640, 360 )
frames = SubResource( 51 )
frame = 10
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="Planet" type="AnimatedSprite" parent="Objects/Star"]
frames = SubResource( 102 )
frame = 22
playing = true
offset = Vector2( 200, 200 )
__meta__ = {
"_edit_lock_": true
}

[node name="Orbit" type="Sprite" parent="Objects/Star"]
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="ShipTrajectory" type="Line2D" parent="Objects"]
width = 2.0
default_color = Color( 0.392157, 0.690196, 0.643137, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Ship" type="AnimatedSprite" parent="Objects"]
position = Vector2( 256, 360 )
frames = SubResource( 113 )
frame = 3
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="UI/Control"]
margin_right = 101.0
margin_bottom = 84.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 120.0
margin_bottom = 152.0
custom_constants/separation = 10
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Launch" type="Button" parent="UI/Control/MarginContainer/VBoxContainer"]
margin_right = 100.0
margin_bottom = 61.0
text = "Launch!"

[node name="Credits" type="Button" parent="UI/Control/MarginContainer/VBoxContainer"]
margin_top = 71.0
margin_right = 100.0
margin_bottom = 132.0
text = "Credits"

[node name="PopupPanel" type="PopupPanel" parent="UI/Control"]
margin_right = 600.0
margin_bottom = 323.0
__meta__ = {
"_edit_lock_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Control/PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_fonts/bold_font = SubResource( 114 )
bbcode_enabled = true
bbcode_text = "[center][b]Credits[/b]
[url=https://deep-fold.itch.io/pixel-planet-generator]Pixel Planet Generator by Deep-Fold[/url]
[url=https://ansimuz.itch.io/spaceship-shooter-environment]Spaceship Shooter Environment by ansimuz[/url]
[url=https://vectorpixelstar.itch.io/space]SPACE by VECTORSTARPIXEL[/url]
[url=https://gamedev.stackexchange.com/a/75037]StackExchange answer by DMGregory[/url]
[url=https://poppyworks.itch.io/silver]Silver by Poppy Works[/url]
[url=https://tinyworlds.itch.io/free-pixel-font-thaleah]Thaleah Fat by Tiny Worlds[/url][/center]"
text = "Credits
Pixel Planet Generator by Deep-Fold
Spaceship Shooter Environment by ansimuz
SPACE by VECTORSTARPIXEL
StackExchange answer by DMGregory
Silver by Poppy Works
Thaleah Fat by Tiny Worlds"
fit_content_height = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="pressed" from="UI/Control/MarginContainer/VBoxContainer/Launch" to="." method="on_launch_pressed"]
[connection signal="pressed" from="UI/Control/MarginContainer/VBoxContainer/Credits" to="." method="on_credits_pressed"]
[connection signal="meta_clicked" from="UI/Control/PopupPanel/RichTextLabel" to="." method="on_meta_clicked"]
